[package]
name = "spotr-process-sensor"
version = "0.1.0"
authors = ["dbregeon <denis.bregeon@digitalbrikes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["dylib"]

[dependencies]
spotr-sensing = { path = "../spotr-sensing", version = "0.1.0" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]